todo_app/base/manifests/service_todoapp.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todoapp-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todoapp-frontend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todoapp-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todoapp-backend
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
